# warnings-plugin

./: .buildinfo  .codeclimate.yml  .env.example  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  SECURITY.md  authors.html  contributing.html  design.html  genindex.html  index.html  installation.html  n.txt  objects.inv  output.json  output.txt  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  security.html  setup.cfg  setup.py  tox.ini  warning_counter.py
.doctrees/: authors.doctree  contributing.doctree  design.doctree  environment.pickle  index.doctree  installation.doctree  readme.doctree
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  python-package.yml
_modules/: index.html
_modules/mlx/: warnings.html
_sources/: index.rst.txt  installation.rst.txt
_static/: classic.css  documentation_options.js
ci/: warnings.py
docs/: authors.rst  conf.py  design.rst  index.rst  installation.rst  requirements.txt  security.rst
src/mlx/: __main__.py  __version__.py  junit_checker.py  regex_checker.py  robot_checker.py  warnings.py  warnings_checker.py
tests/: config_example.json  config_example_exclude.json  config_example_robot.json  coverity_single_defect.txt  junit_double_fail.xml  junit_no_fail.xml  junit_single_fail.xml  report.xml  robot_double_fail.xml  robot_single_fail.xml  sphinx_double_deprecation_warning.txt  sphinx_double_warning.txt  sphinx_single_warning.txt  sphinx_traceability_output.txt  test_config.py  test_coverity.py  test_doxygen.py  test_gcc.py  test_integration.py  test_junit.py  test_limits.py  test_polyspace.py  test_robot.py  test_sphinx.py  test_warnings.py  test_xmlrunner.py
tests/test_in/: code_quality.json  code_quality_format.json  config_code_quality_format.json  config_cq_description_format.json  config_example.json  config_example_coverity.yml  (+37 more)
(+19 files in other folders)
